--- a/plants/index.html
+++ b/plants/index.html
@@ -7,6 +7,22 @@
     <title>plants</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="navbar">
+            <nav class="navigation">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#welcome" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
+                    <li class="nav-item"><a href="#service" class="nav-link">Service</a></li>
+                    <li class="nav-item"><a href="#prices" class="nav-link">Price</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <a class="plants">Plants</a>
+                <img src="assets/img/IMG.jpg" alt="logo" class="vector">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
