feat: add section welcome

--- a/plants/index.html
+++ b/plants/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plants</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -19,10 +20,36 @@
                 </ul>
             </nav>
             <div class="logo">
+                <div class="logo img">
+                    <img src="assets/img/Vector1.jpg" alt="logo1">
+                    <img src="assets/img/Vector2.jpg" alt="logo2">
                 <a class="plants">Plants</a>
-                <img src="assets/img/IMG.jpg" alt="logo" class="vector">
+                </div>
             </div>
         </div>
     </header>
+    <main>
+        <section class="welcome">
+            <div class="leafs">
+                <img src="assets/img/leaf 3.jpg" alt="leaf3">
+                <img src="assets/img/leaf 2.jpg" alt="leaf2">
+                <img src="assets/img/leaf 5.jpg" alt="leaf5">
+                <img src="assets/img/leaf 4.jpg" alt="leaf4">
+                <img src="assets/img/leaf 1.jpg" alt="leaf1">
+            </div>
+            <div class="welcome text">
+                <h1 id="text1">We grow plants and give you oxygen</h1>
+                <p id="text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <button class="button start">LEARN MORE</button>
+            </div>
+        </section>
+        <section class="about">
+            <img src="assets/img/houseplant 1.jpg" alt="houseplant">
+            <div class="about us">
+                <h2 class="about">We are professional experienced gardeners</h2>
+                <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
