feat: add section serviace

--- a/plants/index.html
+++ b/plants/index.html
@@ -29,7 +29,7 @@
         </div>
     </header>
     <main>
-        <section class="welcome">
+        <section class="welcome" id="#welcome">
             <div class="leafs">
                 <img src="assets/img/leaf 3.jpg" alt="leaf3">
                 <img src="assets/img/leaf 2.jpg" alt="leaf2">
@@ -43,11 +43,19 @@
                 <button class="button start">LEARN MORE</button>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="#about">
             <img src="assets/img/houseplant 1.jpg" alt="houseplant">
             <div class="about us">
                 <h2 class="about">We are professional experienced gardeners</h2>
                 <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            </div>
+        </section>
+        <section class="service_content" id="#service">
+            <h2 class="Service and">Service and our projects</h2>
+            <div class="services buttons">
+                <button class="button">Planting</button>
+                <button class="button">Lawn</button>
+                <button class="button">Gardens</button>
             </div>
         </section>
     </main>
