--- a/plants/index.html
+++ b/plants/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plants</title>
+    <link rel="icon" type="img/icon" href="assets/icons/plants.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container-body">
     <header class="header">
         <div class="navbar">
             <nav class="navigation">
@@ -29,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section class="welcome" id="#welcome">
+        <section class="welcome" id="welcome">
             <div class="leafs">
                 <img src="assets/img/leaf 3.jpg" alt="leaf3">
                 <img src="assets/img/leaf 2.jpg" alt="leaf2">
@@ -43,21 +45,65 @@
                 <button class="button start">LEARN MORE</button>
             </div>
         </section>
-        <section class="about" id="#about">
+        <section class="about" id="about">
             <img src="assets/img/houseplant 1.jpg" alt="houseplant">
             <div class="about us">
                 <h2 class="about">We are professional experienced gardeners</h2>
                 <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
         </section>
-        <section class="service_content" id="#service">
-            <h2 class="Service and">Service and our projects</h2>
-            <div class="services buttons">
-                <button class="button">Planting</button>
-                <button class="button">Lawn</button>
-                <button class="button">Gardens</button>
+        <section class="service" id="service">
+            <div class="service_content">
+                <h2 class="service and">Service and our projects</h2>
+                <div class="services buttons">
+                    <button class="button">Planting</button>
+                    <button class="button">Lawn</button>
+                    <button class="button">Gardens</button>
+                </div>
+            </div>
+            <div class="services">
+                <div class="service_item">
+                    <p class="service_text">Garden care</p>
+                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/first1.jpg" alt="first">
+                </div>
+                <div class="service_item">
+                    <p class="service_text">Planting</p>
+                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/first2.jpg" alt="first">
+                </div>
+                <div class="service_item">
+                    <p class="service_text">Lawn care</p>
+                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/first3.jpg" alt="first">
+                </div>
+                <div class="service_item">
+                    <p class="service_text">Planting</p>
+                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/first4.jpg" alt="first">
+                </div>
+                <div class="service_item">
+                    <p class="service_text">Garden care</p>
+                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/first5.jpg" alt="first">
+                </div>
+                <div class="service_item">
+                    <p class="service_text">Planting</p>
+                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/first6.jpg" alt="first">
+                </div>
             </div>
         </section>
+        <footer>
+            
+        </footer>
     </main>
+  </div>
 </body>
 </html>
