feat: add style welcome and header

--- a/plants/index.html
+++ b/plants/index.html
@@ -12,6 +12,12 @@
   <div class="container-body">
     <header class="header">
         <div class="navbar">
+            <div class="logo">
+                <div class="logo img">
+                    <img src="assets/img/vector.jpg" alt="logo">
+                <a class="plants">Plants</a>
+                </div>
+            </div>
             <nav class="navigation">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#welcome" class="nav-link">Home</a></li>
@@ -21,23 +27,12 @@
                     <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="logo">
-                <div class="logo img">
-                    <img src="assets/img/Vector1.jpg" alt="logo1">
-                    <img src="assets/img/Vector2.jpg" alt="logo2">
-                <a class="plants">Plants</a>
-                </div>
-            </div>
         </div>
     </header>
     <main>
         <section class="welcome" id="welcome">
             <div class="leafs">
-                <img src="assets/img/leaf 3.jpg" alt="leaf3">
-                <img src="assets/img/leaf 2.jpg" alt="leaf2">
-                <img src="assets/img/leaf 5.jpg" alt="leaf5">
-                <img src="assets/img/leaf 4.jpg" alt="leaf4">
-                <img src="assets/img/leaf 1.jpg" alt="leaf1">
+                <img src="assets/img/leafs.jpg" alt="leafs">
             </div>
             <div class="welcome text">
                 <h1 id="text1">We grow plants and give you oxygen</h1>
@@ -101,7 +96,28 @@
             </div>
         </section>
         <footer>
-            
+            <div class="content">
+                <div class="footer-data">
+                    <a>©</a>
+                    <a>2022</a>
+                    <a>github</a>
+                </div>
+                <p>Rolling Scopes School</p>
+                <ul class="social-list">
+                    <li class="inst 1" href="https://www.instagram.com/andrey_nenashev28/">
+                        <img class="inst" src="assets/icons/inst.svg" alt="inst">
+                    </li>
+                    <li class="fb 1" href="https://www.facebook.com/andrey.nenashev.5">
+                        <img class="fb" src="assets/icons/fb.svg" alt="fb">
+                    </li>
+                    <li class="tw 1">
+                        <img class="tw" src="assets/icons/tw.svg" alt="tw">
+                    </li>
+                    <li class="pinterest 1">
+                        <img class="pint" src="assets/icons/pint.svg" alt="pinterest">
+                    </li>
+                </ul>
+            </div>
         </footer>
     </main>
   </div>
