--- a/plants/index.html
+++ b/plants/index.html
@@ -14,13 +14,13 @@
         <div class="navbar">
             <div class="logo">
                 <div class="logo img">
-                    <img src="assets/img/vector.jpg" alt="logo">
+                    <img src="assets/img/vector.jpg" alt="logo" width="25" height="25">
                 <a class="plants">Plants</a>
                 </div>
             </div>
             <nav class="navigation">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#welcome" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#welcome" class="nav-link1">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
                     <li class="nav-item"><a href="#service" class="nav-link">Service</a></li>
                     <li class="nav-item"><a href="#prices" class="nav-link">Price</a></li>
@@ -41,16 +41,18 @@
             </div>
         </section>
         <section class="about" id="about">
-            <img src="assets/img/houseplant 1.jpg" alt="houseplant">
             <div class="about us">
                 <h2 class="about">We are professional experienced gardeners</h2>
                 <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
+            <div class="houseplant">
+                <img src="assets/img/houseplant 1.jpg" alt="houseplant">
+            </div>
         </section>
         <section class="service" id="service">
             <div class="service_content">
-                <h2 class="service and">Service and our projects</h2>
-                <div class="services buttons">
+                <h2 class="service_and">Service and our projects</h2>
+                <div class="services_buttons">
                     <button class="button">Planting</button>
                     <button class="button">Lawn</button>
                     <button class="button">Gardens</button>
@@ -58,40 +60,40 @@
             </div>
             <div class="services">
                 <div class="service_item">
+                    <img src="assets/img/first1.jpg" alt="first">
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
                     <p class="service_text">Garden care</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
-                    <img src="assets/img/first1.jpg" alt="first">
                 </div>
                 <div class="service_item">
+                    <img src="assets/img/first2.jpg" alt="first">
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
                     <p class="service_text">Planting</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
-                    <img src="assets/img/first2.jpg" alt="first">
                 </div>
                 <div class="service_item">
+                    <img src="assets/img/first3.jpg" alt="first">
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
                     <p class="service_text">Lawn care</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
-                    <img src="assets/img/first3.jpg" alt="first">
                 </div>
                 <div class="service_item">
+                    <img src="assets/img/first4.jpg" alt="first">
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
                     <p class="service_text">Planting</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
-                    <img src="assets/img/first4.jpg" alt="first">
                 </div>
                 <div class="service_item">
+                    <img src="assets/img/first5.jpg" alt="first">
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
                     <p class="service_text">Garden care</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
-                    <img src="assets/img/first5.jpg" alt="first">
                 </div>
                 <div class="service_item">
+                    <img src="assets/img/first6.jpg" alt="first">
+                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
                     <p class="service_text">Planting</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
-                    <img src="assets/img/first6.jpg" alt="first">
                 </div>
             </div>
         </section>
@@ -100,9 +102,9 @@
                 <div class="footer-data">
                     <a>©</a>
                     <a>2022</a>
-                    <a>github</a>
+                    <a href="https://github.com/andrey28121989">github</a>
                 </div>
-                <p>Rolling Scopes School</p>
+                <a class="rsschool" href="https://rs.school/js-stage0/">Rolling Scopes School</a>
                 <ul class="social-list">
                     <li class="inst 1" href="https://www.instagram.com/andrey_nenashev28/">
                         <img class="inst" src="assets/icons/inst.svg" alt="inst">
