feat: add html price and contacts

--- a/plants/index.html
+++ b/plants/index.html
@@ -97,6 +97,32 @@
                 </div>
             </div>
         </section>
+        <section class="prices" id="prices">
+            <div class="prices_wrapper">
+                <div class="Prices">
+                    <h2 class="text_praces">Prices</h2>
+                    <div class="prace-item">
+
+                    </div>
+                    <div class="text_call_us">
+                        <h2 class="our_best">Our best gardeners are ready to help you</h2>
+                        <button class="button2">Contact us</button>
+                    </div>
+                    <div class="contact">
+                        <img src="assets/img/contact.jpg" alt="contact">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contacts" id="contacts">
+            <div class="contact_woman">
+                <img src="assets/img/contact_woman 1.jpg" alt="contact_woman">
+            </div>
+            <h2 class="Contact_us">Contact us</h2>
+            <div class="contacts-container">
+
+            </div>
+        </section>
         <footer>
             <div class="content">
                 <div class="footer-data">
