--- a/plants/index.html
+++ b/plants/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <div class="logo">
                 <div class="logo img">
-                    <img src="assets/img/vector.jpg" alt="logo" width="25" height="25">
+                    <img src="assets/img/vector.svg" alt="logo" width="25" height="25">
                 <a class="plants">Plants</a>
                 </div>
             </div>
@@ -32,17 +32,18 @@
     <main>
         <section class="welcome" id="welcome">
             <div class="leafs">
-                <img src="assets/img/leafs.jpg" alt="leafs">
+                <img src="assets/img/leafs.svg" alt="leafs">
             </div>
             <div class="welcome text">
-                <h1 id="text1">We grow plants and give you oxygen</h1>
+                <h1 id="text1">We grow <span class="green">plants</span> and give you oxygen</h1>
                 <p id="text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                 <button class="button start">LEARN MORE</button>
             </div>
         </section>
         <section class="about" id="about">
-            <div class="about us">
-                <h2 class="about">We are professional experienced gardeners</h2>
+            <div class="about_us">
+                <h2 class="about_text">We are  <span class="red">professional <br>
+                    experienced </span>gardeners</h2>
                 <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
             <div class="houseplant">
@@ -51,7 +52,8 @@
         </section>
         <section class="service" id="service">
             <div class="service_content">
-                <h2 class="service_and">Service and our projects</h2>
+                <h2 class="service_and">Service and our <br>
+                    projects</h2>
                 <div class="services_buttons">
                     <button class="button">Planting</button>
                     <button class="button">Lawn</button>
@@ -109,16 +111,16 @@
                         <button class="button2">Contact us</button>
                     </div>
                     <div class="contact">
-                        <img src="assets/img/contact.jpg" alt="contact">
+                        <img src="assets/img/contact.svg" alt="contact">
                     </div>
                 </div>
             </div>
         </section>
         <section class="contacts" id="contacts">
             <div class="contact_woman">
-                <img src="assets/img/contact_woman 1.jpg" alt="contact_woman">
+                <img src="assets/img/contact_woman 1.svg" alt="contact_woman">
             </div>
-            <h2 class="Contact_us">Contact us</h2>
+            <h2 class="contact_us">Contact us</h2>
             <div class="contacts-container">
 
             </div>
@@ -126,22 +128,22 @@
         <footer>
             <div class="content">
                 <div class="footer-data">
-                    <a>©</a>
-                    <a>2022</a>
-                    <a href="https://github.com/andrey28121989">github</a>
+                    <a>©   </a>
+                    <a>2022   </a>
+                    <a>github</a>
                 </div>
                 <a class="rsschool" href="https://rs.school/js-stage0/">Rolling Scopes School</a>
                 <ul class="social-list">
-                    <li class="inst 1" href="https://www.instagram.com/andrey_nenashev28/">
+                    <li class="inst_1" href="https://www.instagram.com/andrey_nenashev28/">
                         <img class="inst" src="assets/icons/inst.svg" alt="inst">
                     </li>
-                    <li class="fb 1" href="https://www.facebook.com/andrey.nenashev.5">
+                    <li class="fb_1" href="https://www.facebook.com/andrey.nenashev.5">
                         <img class="fb" src="assets/icons/fb.svg" alt="fb">
                     </li>
-                    <li class="tw 1">
+                    <li class="tw_1">
                         <img class="tw" src="assets/icons/tw.svg" alt="tw">
                     </li>
-                    <li class="pinterest 1">
+                    <li class="pinterest_1">
                         <img class="pint" src="assets/icons/pint.svg" alt="pinterest">
                     </li>
                 </ul>
