--- a/plants/index.html
+++ b/plants/index.html
@@ -7,6 +7,7 @@
     <title>plants</title>
     <link rel="icon" type="img/icon" href="assets/icons/plants.svg">
     <link rel="stylesheet" href="style.css">
+    <script src="./index.js"></script>
 </head>
 <body>
   <div class="container-body">
