--- a/plants/index.html
+++ b/plants/index.html
@@ -129,17 +129,21 @@
         <footer>
             <div class="content">
                 <div class="footer-data">
-                    <a>©   </a>
-                    <a>2022   </a>
-                    <a>github</a>
+                    <p>©</p>
+                    <p>2022</p>
+                    <a href="https://github.com/andrey28121989" class="github-link">github</a>
                 </div>
-                <a class="rsschool" href="https://rs.school/js-stage0/">Rolling Scopes School</a>
+                <a href="https://rs.school/js-stage0/" class="rsschool" >Rolling Scopes School</a>
                 <ul class="social-list">
-                    <li class="inst_1" href="https://www.instagram.com/andrey_nenashev28/">
+                    <li>
+                        <a href="https://www.instagram.com/andrey_nenashev28/" class="inst_1">
                         <img class="inst" src="assets/icons/inst.svg" alt="inst">
+                        </a>
                     </li>
-                    <li class="fb_1" href="https://www.facebook.com/andrey.nenashev.5">
+                    <li>
+                        <a href="https://www.facebook.com/andrey.nenashev.5" class="fb_1">
                         <img class="fb" src="assets/icons/fb.svg" alt="fb">
+                        </a>
                     </li>
                     <li class="tw_1">
                         <img class="tw" src="assets/icons/tw.svg" alt="tw">
