fix: errors css welcome and about

--- a/plants/index.html
+++ b/plants/index.html
@@ -43,12 +43,12 @@
         </section>
         <section class="about" id="about">
             <div class="about_us">
-                <h2 class="about_text">We are  <span class="red">professional <br>
+                <h2 id="about_text">We are  <span class="red">professional <br>
                     experienced </span>gardeners</h2>
                 <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
             <div class="houseplant">
-                <img src="assets/img/houseplant 1.jpg" alt="houseplant">
+                <img src="assets/img/houseplant1.jpg" alt="houseplant">
             </div>
         </section>
         <section class="service" id="service">
@@ -64,37 +64,37 @@
             <div class="services">
                 <div class="service_item">
                     <img src="assets/img/first1.jpg" alt="first">
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
                     <p class="service_text">Garden care</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
                 </div>
                 <div class="service_item">
                     <img src="assets/img/first2.jpg" alt="first">
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
                     <p class="service_text">Planting</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
                 </div>
                 <div class="service_item">
                     <img src="assets/img/first3.jpg" alt="first">
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
                     <p class="service_text">Lawn care</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
                 </div>
                 <div class="service_item">
                     <img src="assets/img/first4.jpg" alt="first">
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
                     <p class="service_text">Planting</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
                 </div>
                 <div class="service_item">
                     <img src="assets/img/first5.jpg" alt="first">
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
                     <p class="service_text">Garden care</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
                 </div>
                 <div class="service_item">
                     <img src="assets/img/first6.jpg" alt="first">
-                    <img src="assets/img/Rectangle 5.jpg" alt="Rectangle 5">
+                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
                     <p class="service_text">Planting</p>
                     <p class="lorem">Lorem Ipsum has been the industry</p>
                 </div>
@@ -119,7 +119,7 @@
         </section>
         <section class="contacts" id="contacts">
             <div class="contact_woman">
-                <img src="assets/img/contact_woman 1.svg" alt="contact_woman">
+                <img src="assets/img/contact_woman1.svg" alt="contact_woman">
             </div>
             <h2 class="contact_us">Contact us</h2>
             <div class="contacts-container">
