fix: errors css and html services

--- a/plants/index.html
+++ b/plants/index.html
@@ -38,7 +38,7 @@
             <div class="welcome text">
                 <h1 id="text1">We grow <span class="green">plants</span> and give you oxygen</h1>
                 <p id="text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <button class="button start">LEARN MORE</button>
+                <button class="button_start">LEARN MORE</button>
             </div>
         </section>
         <section class="about" id="about">
@@ -63,40 +63,46 @@
             </div>
             <div class="services">
                 <div class="service_item">
-                    <img src="assets/img/first1.jpg" alt="first">
-                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
-                    <p class="service_text">Garden care</p>
-                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/first1.jpg" class="service_img" alt="first">
+                    <div class="service_text1">
+                        <h3 class="service_text">Garden care</h3>
+                        <p class="lorem">Lorem Ipsum has been the industry</p>
+                    </div>
                 </div>
                 <div class="service_item">
-                    <img src="assets/img/first2.jpg" alt="first">
-                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
-                    <p class="service_text">Planting</p>
-                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/first2.jpg" class="service_img" alt="first">
+                    <div class="service_text1">
+                        <h3 class="service_text">Planting</h3>
+                        <p class="lorem">Lorem Ipsum has been the industry</p>
+                    </div>
                 </div>
                 <div class="service_item">
-                    <img src="assets/img/first3.jpg" alt="first">
-                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
-                    <p class="service_text">Lawn care</p>
-                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/first3.jpg" class="service_img" alt="first">
+                    <div class="service_text1">
+                        <h3 class="service_text">Lawn care</h3>
+                        <p class="lorem">Lorem Ipsum has been the industry</p>
+                    </div>
                 </div>
                 <div class="service_item">
-                    <img src="assets/img/first4.jpg" alt="first">
-                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
-                    <p class="service_text">Planting</p>
-                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/first4.jpg" class="service_img" alt="first">
+                    <div class="service_text1">
+                        <h3 class="service_text">Planting</h3>
+                        <p class="lorem">Lorem Ipsum has been the industry</p>
+                    </div>
                 </div>
                 <div class="service_item">
-                    <img src="assets/img/first5.jpg" alt="first">
-                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
-                    <p class="service_text">Garden care</p>
-                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/first5.jpg" class="service_img" alt="first">
+                    <div class="service_text1">
+                        <h3 class="service_text">Garden care</h3>
+                        <p class="lorem">Lorem Ipsum has been the industry</p>
+                    </div>
                 </div>
                 <div class="service_item">
-                    <img src="assets/img/first6.jpg" alt="first">
-                    <img src="assets/img/Rectangle5.jpg" alt="Rectangle5">
-                    <p class="service_text">Planting</p>
-                    <p class="lorem">Lorem Ipsum has been the industry</p>
+                    <img src="assets/img/first6.jpg" class="service_img" alt="first">
+                    <div class="service_text1">
+                        <h3 class="service_text">Planting</h3>
+                        <p class="lorem">Lorem Ipsum has been the industry</p>
+                    </div>
                 </div>
             </div>
         </section>
