fix: blok praces html and css

--- a/plants/index.html
+++ b/plants/index.html
@@ -108,10 +108,37 @@
         </section>
         <section class="prices" id="prices">
             <div class="prices_wrapper">
-                <div class="Prices">
-                    <h2 class="text_praces">Prices</h2>
+                <div class="prices_text">
                     <div class="prace-item">
-
+                        <div class="prace-block">
+                            <h2 class="prace-text">Prices</h2>
+                            <div class="prace-link">
+                                <div class="prace-basic">
+                                    <p class="prace_link_text">Basics</p>
+                                    <div class="accord_btn">
+                                        <button class="accord">
+                                            <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="prace-basic">
+                                    <p class="prace_link_text">Standard</p>
+                                    <div class="accord_btn">
+                                        <button class="accord">
+                                            <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="prace-basic">
+                                    <p class="prace_link_text">Pro care</p>
+                                    <div class="accord_btn">
+                                        <button class="accord">
+                                            <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="text_call_us">
                         <h2 class="our_best">Our best gardeners are ready to help you</h2>
