--- a/plants/index.html
+++ b/plants/index.html
@@ -155,12 +155,21 @@
             </div>
         </section>
         <section class="contacts" id="contacts">
-            <div class="contact_woman">
-                <img src="assets/img/contact_woman1.svg" alt="contact_woman">
-            </div>
-            <h2 class="contact_us">Contact us</h2>
-            <div class="contacts-container">
-
+            <div class="contacts_block">
+                <div class="contacts_container">
+                    <div class="contact_img">
+                        <img src="assets/img/contact_woman1.svg" alt="woman">
+                    </div>
+                    <h2 class="contact_us">Contact us</h2>
+                    <div class="contacts_city">
+                        <p class="city_text">City</p>
+                        <div class="accord_btn1">
+                            <button class="accord1">
+                                <img src="assets/img/arrow.png" class="accordion_btn1" alt="accordion1">
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <footer>
