--- a/plants/index.html
+++ b/plants/index.html
@@ -25,7 +25,6 @@
                     <div class="line"></div>
             </butto>
             <nav class="navigation">
-                
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#welcome" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
@@ -41,7 +40,7 @@
             <div class="leafs">
                 <img src="assets/img/leafs.svg" alt="leafs">
             </div>
-            <div class="welcome text">
+            <div class="welcome__text">
                 <h1 id="text1">We grow <span class="green">plants</span> and give you oxygen</h1>
                 <p id="text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                 <button class="button_start">LEARN MORE</button>
